--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+min-hight: 100%;
+background: url(http://source.unsplash.com/featured/?nature/?trees) no-repeat center center fixed;
+background-size: cover;
+overflow:none;
+color: white;
+}
+body:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0.5;
 }
 
 code {
